--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "@tailwindcss/vite": "^4.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.2"
+    "react-router-dom": "^7.1.2",
+    "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -33,6 +34,6 @@
     "helmet": "^8.0.0",
     "postcss": "^8.5.2",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "vite": "^6.2.3"
   }
 }
